--- a/settings/atom/styles.less
+++ b/settings/atom/styles.less
@@ -15,31 +15,18 @@
  * (To see them, uncomment and save)
  */
 
-// tab bar style
-.tab-bar {
-	.tab {
-		background-color: #181818;
-	}
-}
-.pane.active {
-	.tab.active {
-		//background-color: #161616;
-	}
-}
-
 // style the background color of the tree view
 .tree-view {
-	// background-color: whitesmoke;
-	background-color: #101010;
+  // background-color: whitesmoke;
 }
 
 // style the background and foreground colors on the atom-text-editor-element itself
 atom-text-editor {
-	// color: white;
-	background-color: #101010;
+  // color: white;
+  // background-color: hsl(180, 24%, 12%);
 }
 
 // style UI elements inside atom-text-editor
 atom-text-editor .cursor {
-	border-color: grey;
+  // border-color: red;
 }
